--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 APScheduler==3.5.1
+certifi==2018.1.18
+chardet==3.0.4
 click==6.7
 elasticsearch==6.2.0
+ez-setup==0.9
 Flask==0.12.2
 Flask-APScheduler==1.8.0
 Flask-Elasticsearch==0.2.5
@@ -8,16 +11,23 @@ Flask-Redis==0.3.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.7.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 PyMySQL==0.8.0
+pysqlite3==0.1.0
 python-dateutil==2.7.0
 pytz==2018.3
+qqbot==2.3.10
 redis==2.10.6
+requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.2.5
 tzlocal==1.5.1
 urllib3==1.22
+uWSGI==2.0.17
+virtualenv==15.1.0
 Werkzeug==0.14.1
 WTForms==2.1
