修改配置文件

--- a/gunicorn.ini
+++ b/gunicorn.ini
@@ -11,7 +11,7 @@ errorlog = "/tmp/subview-error.log"
 pidfile = "/tmp/subview-pid.pid"
 daemon = True
 preload = False
-
+reload = True
 
 # 启动 /usr/local/bin/gunicorn -c gunicorn.ini subview:app
 # /usr/local/bin/gunicorn -w 4 -b 0.0.0.0:9008 subview:app --preload
