区分环境配置文件

--- a/subview.ini
+++ b/subview.ini
@@ -1,8 +1,10 @@
 [uwsgi]
-base=/usr/share/nginx/www/subview
+base=/application/sub_view/sub_view
 socket = 127.0.0.1:9999
 module=subview:app
 master = true
+uid = nginx
+gid = nginx
 processes = 4
 threads = 2
 callable = app
